code gesimplificeerd methodes voor geprivileerde code uitgesplitst naar classes ncCore-4.2 jar toegevoegd

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
     ${file.reference.plugin.jar-1}
 excludes=
 file.reference.javaws.jar=../libs/javaws.jar
+file.reference.ncCore-4.2.jar=lib/ncCore-4.2.jar
 file.reference.plugin.jar=lib/plugin.jar
 file.reference.plugin.jar-1=../libs/plugin.jar
 includes=**
@@ -38,7 +39,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.plugin.jar}
+    ${file.reference.plugin.jar}:\
+    ${file.reference.ncCore-4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
