--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/local-access-applet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
-    ${file.reference.javaws.jar}:\
-    ${file.reference.plugin.jar-1}
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/plugin.jar
 excludes=
 file.reference.javaws.jar=../libs/javaws.jar
 file.reference.ncCore-4.2.jar=lib/ncCore-4.2.jar
@@ -77,7 +77,11 @@ jnlp.offline-allowed=false
 jnlp.signed=true
 jnlp.signing=key
 jnlp.signing.alias=key
-jnlp.signing.keystore=key/keystore.ks
+jnlp.signing.keystore=key\\keystore.ks
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
