--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,15 @@
             <version>4.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>sun</groupId>
+            <artifactId>plugin</artifactId>
+            <version>2.0</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>windows-1252</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
     </properties>    
     <repositories>
         <repository>
