--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,31 @@
         </dependency>
     </dependencies>
     <repositories>
+       <repository>
+            <id>repo.b3p.nl</id>
+            <name>B3P file Repository</name>
+            <url>http://repo.b3p.nl/nexus/content/repositories/releases/</url>
+        </repository>
         <repository>
             <id>nl.b3p.gissuite</id>
             <name>B3P GIS Suite Maven Repository</name>
             <url>file://${project.basedir}/../B3pGisSuiteMvnRepo</url>
         </repository>
     </repositories>
-    <build>
+    <scm>
+        <connection>scm:git:git@github.com:B3Partners/local-access-applet.git</connection>
+        <developerConnection>scm:git:git@github.com:B3Partners/local-access-applet.git</developerConnection>
+        <url>https://github.com/B3Partners/local-access-applet</url>
+      <tag>securityfilter-b3p-4.2.1</tag>
+    </scm>
+    <distributionManagement>
+        <repository>
+            <id>repo.b3p.nl</id>
+            <name>B3P file Repository</name>
+            <url>http://repo.b3p.nl/nexus/content/repositories/releases/</url>
+        </repository>
+    </distributionManagement>
+     <build>
         <defaultGoal>package</defaultGoal>
         <plugins>
             <plugin>
@@ -78,6 +96,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>                
+                <groupId>org.apache.maven.plugins</groupId>                
+                <artifactId>maven-release-plugin</artifactId>                
+                <version>2.5.2</version>                
+                <configuration>                    
+                    <pushChanges>true</pushChanges>                
+                </configuration>            
             </plugin>
         </plugins>
     </build>
